--- a/aspnetapp/Views/Home/About.cshtml
+++ b/aspnetapp/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Devops Training ....</p>
 
 
 this is test for Devops Training 
