--- a/aspnetapp/Views/Home/About.cshtml
+++ b/aspnetapp/Views/Home/About.cshtml
@@ -7,4 +7,7 @@
 <p>Devops Training .... 10000 </p>
 
 
+this message will appear to confirm that the old image removed Sucessfully 
+
+
 this is test for Devops Training 
